This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2022-10-14:

- Fixed: the generic --version option was not recognised for the built-in
  commands ., bg, disown, fc, fg, hist, jobs, let, source, times, and ulimit.

2022-10-13:

- Added a -V/--novmon option to ulimit that supports setting the number of open
  vnodes (only applies to Haiku).

- Fixed a bug on Haiku that caused the ulimit command to print '(null)' in the
  error string when 'ulimit -t' fails.

- 'ulimit -a' no longer exits immediately after an error occurs when failing
  to get the current limits for cpu time and file size on Haiku.

2022-10-11:

- Fixed a bug that caused inconsistent behavior when handling a dangling
  backslash in a case statement.

2022-10-07:

- Fixed BUG_BRACQUOT: single and double shell quotes did not work to escape
  the !, ^ or - operators in a bracket expression within a glob pattern.

- The -e option of test/[/[[ no longer returns true for pseudodevices that are
  only supported by the shell and do not in fact exist in the file system, such
  as /dev/tcp/*. This reverts a change made in ksh 93u- on 2010-08-24.

2022-09-28:

- Fixed a bug where LINENO was reset to 1 after being temporarily changed in
  an assignment preceding a regular command (e.g. LINENO=5 true).

2022-09-27:

- Fixed a parsing bug in (uncommonly used) function definitions of the
  form 'functname() simple_command' that could cause the first word of
  simple_command to be corrupted with trailing garbage.

2022-09-25:

- Backported support for 'print -u p' from ksh93v- 2014-06-06 (this is
  equivalent to using 'print -p').

- Fixed a bug introduced on 2021-04-04 that incorrectly allowed 'typeset' to
  turn off the readonly and export attributes on a readonly variable.
